# pro_audio_config

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  install.sh  uninstall.sh
.github/workflows/: rust-ci.yml  rust.yml
data/: styles.css
scrshots/: README.md
src/: audio.rs  audio_capture.rs  config.rs  config_inspector.rs  lib.rs  main.rs  monitoring.rs  ui.rs  utils.rs
src/ui/: advanced_tab.rs  app.rs  audio_tab.rs  components.rs  constants.rs  dialogs.rs  helpers.rs  mod.rs  preferences.rs  tab_types.rs
tests/: audio_integration.rs  common.rs  integration.rs  integration_tests.rs  ui_integration.rs
tests/common/: mod.rs
