[package]
name = "pro_audio_config"
version = "1.8.0"
authors = ["Peter Leukanič"]
edition = "2024"
description = "A professional audio configuration tool for Linux systems"
license = "MIT"
repository = "https://github.com/Peter-L-SVK/pro_audio_config"
readme = "README.md"

[dependencies]
anyhow = "1.0"
gtk = { version = "0.18.2", features = ["v3_24"] }
gio = "0.21"
glib = { version = "0.21", features = ["v2_80"] }
glob = "0.3"
libspa = "0.9.2"
dirs = "6.0"
chrono = "0.4.42"
directories = "6.0"
whoami = "1.6"
shellexpand = "3.1"
toml = "0.8.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
pipewire = { version = "0.9.2", optional = true }
lazy_static = "1.4.0"
bytemuck = "1.14"
libc = "0.2"
regex = "1.10"

[features]
default = ["pipewire-monitoring"]  # Default includes pipewire monitoring
pipewire-monitoring = ["pipewire"]  # Enable the optional pipewire dependency
simulation = []  # Simulation only mode (no pipewire dependency)

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dev-dependencies]
mockall = "0.14"
tempfile = "3.23" 
pro_audio_config = { path = "." }

[profile.test]
panic = "abort" 

[package.metadata.deb]
maintainer = "Peter Leukanič"
copyright = "2025, Peter Leukanič"
depends = "$auto, pipewire-alsa, wireplumber, policykit-1"
section = "sound"
assets = [
    ["target/release/pro_audio_config", "usr/bin/", "755"],
    ["icons/48x48/icon.png", "usr/share/icons/hicolor/48x48/apps/pro-audio-config.png", "644"],
    ["pro-audio-config.desktop", "usr/share/applications/", "644"],
]
